boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 3
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring-container
          image: errorpirate/dwbh-backend:182
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
          volumeMounts: 
            - name: env-file 
              mountPath: /mnt/env/
              subPath: .env
      volumes: 
        - name: env-file 
          configMap: 
            name: dwbh-env-config
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8089
  selector:
    app: spring
